moved statement validation to another class and refactored the code