@@ -4,21 +4,19 @@ import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.lukawska.trainsmart.shared_persistence.domain.entities.User;
-import org.lukawska.trainsmart.shared_persistence.domain.repositories.UserRepository;
 import org.lukawska.trainsmart.statements.application.dto.UserAgreementRequest;
 import org.lukawska.trainsmart.statements.application.dto.UserAgreementResponse;
 import org.lukawska.trainsmart.statements.application.exception.ExceptionType;
 import org.lukawska.trainsmart.statements.application.exception.StatementException;
 import org.lukawska.trainsmart.statements.application.mapper.UserAgreementMapper;
+import org.lukawska.trainsmart.statements.application.validation.UserAgreementValidator;
 import org.lukawska.trainsmart.statements.domain.entities.UserAgreement;
 import org.lukawska.trainsmart.statements.domain.repositories.UserAgreementRepository;
-import org.lukawska.trainsmart.statements.domain.valueObjects.AgreementStatus;
 import org.lukawska.trainsmart.statements.infra.config.Statement;
 import org.lukawska.trainsmart.statements.infra.config.StatementsDefinition;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -27,78 +25,59 @@ public class UserAgreementService {
 
     private final UserAgreementRepository agreementRepository;
 
-    private final UserRepository userRepository;
+    private final UserAgreementValidator userAgreementValidator;
 
-    private final StatementsDefinition definitions;
+    private final StatementsDefinition statementsDefinition;
 
     @Transactional
     public UserAgreementResponse signNewAgreement(UserAgreementRequest request) {
-        Statement statement = validateStatement(request);
+        Statement statement = userAgreementValidator.validateStatement(request);
+        User existingUser = userAgreementValidator.validateAndGetUser(request);
 
-        if (agreementRepository.findByUserIdAndStatementCode(request.userId(), request.statementCode())
-                               .isPresent()) {
-            throw new StatementException(ExceptionType.USER_AGREEMENT_ALREADY_EXISTS);
-        }
-
-        log.debug("Checking if user with ID {} exists.", request.userId());
-        User user = userRepository.findById(request.userId())
-                                  .orElseThrow(() -> new StatementException(ExceptionType.USER_NOT_FOUND));
-
-        UserAgreement toSave = new UserAgreement(user,
-                                                 request.statementCode(),
-                                                 statement.version(),
-                                                 request.status());
+        UserAgreement agreementRecord = new UserAgreement(existingUser,
+                                                          request.statementCode(),
+                                                          statement.version(),
+                                                          request.status());
 
         log.info("Saving agreement with user ID: {} and statement code: {}",
                  request.userId(), request.statementCode());
-        return UserAgreementMapper.mapToResponse(agreementRepository.save(toSave));
+        return UserAgreementMapper.mapToResponse(agreementRepository.save(agreementRecord));
     }
 
     @Transactional
     public UserAgreementResponse reSignAgreement(UserAgreementRequest request) {
-        Statement statement = validateStatement(request);
+        Statement statement = userAgreementValidator.validateStatement(request);
 
-        UserAgreement ua = agreementRepository
+        UserAgreement userAgreement = agreementRepository
                 .findByUserIdAndStatementCode(request.userId(), request.statementCode())
                 .orElseThrow(() -> new StatementException(ExceptionType.USER_AGREEMENT_NOT_FOUND));
 
         log.info("Updating version and changing status to: {} for agreement with ID: {}",
-                 request.status(), ua.getId());
+                 request.status(), userAgreement.getId());
 
-        ua.changeStatus(request.status());
-        ua.updateStatementVersion(statement.version());
+        userAgreement.changeStatus(request.status());
+        userAgreement.updateStatementVersion(statement.version());
 
-        return UserAgreementMapper.mapToResponse(ua);
+        return UserAgreementMapper.mapToResponse(userAgreement);
     }
 
     public List<UserAgreementResponse> getRequiredStatementsToSign(Long userId) {
         log.debug("Getting required statements to sign for userId: {}", userId);
-        List<UserAgreementResponse> found = agreementRepository.findAllByUserId(userId)
-                                                               .stream()
-                                                               .filter(ua -> {
-                                                                   Statement required =
-                                                                           definitions.getRequiredStatementsMap()
-                                                                                      .get(ua.getStatementCode());
-                                                                   return required != null &&
-                                                                           ua.getStatementVersion() != required.version();
-                                                               })
-                                                               .map(UserAgreementMapper::mapToResponse)
-                                                               .collect(Collectors.toList());
+        List<UserAgreementResponse> outdatedUserAgreements = agreementRepository
+                .findAllByUserId(userId)
+                .stream()
+                .filter(userAgreement -> {
+                    Statement required = statementsDefinition
+                            .getRequiredStatementsMap()
+                            .get(userAgreement.getStatementCode());
+                    return required != null &&
+                            userAgreement.getStatementVersion() != required.version();
+                })
+                .map(UserAgreementMapper::mapToResponse)
+                .toList();
 
-        log.info("Found required statements to sign count: {} for user with ID: {}", found.size(), userId);
-        return found;
-    }
-
-    private Statement validateStatement(UserAgreementRequest request) {
-        log.info("Fetching data for statement with code: {}", request.statementCode());
-        Statement statement = definitions.findStatementByCode(request.statementCode())
-                                         .orElseThrow(() -> new StatementException(ExceptionType.STATEMENT_NOT_FOUND));
-
-        log.debug("Checking if required statement with code: {} is accepted", request.statementCode());
-        if (statement.required() && request.status() == AgreementStatus.REJECTED) {
-            throw new StatementException(ExceptionType.STATEMENT_ACCEPTANCE_REQUIRED);
-        }
-
-        return statement;
+        log.info("Found required statements to sign count: {} for user with ID: {}",
+                 outdatedUserAgreements.size(), userId);
+        return outdatedUserAgreements;
     }
 }
